@@ -1,31 +1,33 @@
 package app.service.rank;
 
-import java.time.LocalDate;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
+import static org.springframework.data.jpa.domain.Specification.where;
 
+import java.time.LocalDate;
+import java.util.List;
+
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import app.dao.rank.RankDao;
-import app.dao.rank.RankSpecification;
-import app.dao.rank.SearchCriteria;
-import app.dao.rank.SearchOperation;
+import app.dao.rank.RankingDao;
+import app.dao.rank.RankingSpecification;
 import app.model.GameStats;
-import app.model.Rank;
+import app.model.Ranking;
 import app.model.UserStats;
 import lombok.AllArgsConstructor;
 
 @Service
 @AllArgsConstructor
+@Transactional
 public class RankServiceImpl implements RankService {
 	
-	private RankDao rankDao;
+	private RankingDao rankDao;
 
 	@Override
-	public Rank saveRank(UserStats stat, GameStats gameStat) {
-		Rank rank = new Rank();
+	public Ranking saveRank(UserStats stat, GameStats gameStat) {
+		Ranking rank = new Ranking();
 		rank.setUser(stat.getUser());
 		rank.setScore(stat.getScore());
 		rank.setWord(stat.getWord());
@@ -36,30 +38,24 @@ public class RankServiceImpl implements RankService {
 
 	@Override
 	public void removeFromRank(String rankId) {
-		Rank rank = rankDao.getOne(rankId);
+		Ranking rank = rankDao.getOne(rankId);
 		rankDao.delete(rank);
 	}
 
 	@Override
-	public List<Rank> getRankList() {
-		List<Rank> rankList = rankDao.findTop10ByOrderByScoreDesc();
-		return rankList;
+	public List<Ranking> getRankList() {
+		return rankDao.findTop10ByOrderByScoreDesc();
 	}
 
 	@Override
-	public List<Rank> getRankByMonth() {
+	public List<Ranking> getRankByMonth() {
 		
-		RankSpecification rankingByMonth = new RankSpecification();
 		LocalDate ld = LocalDate.now();
 		LocalDate start = ld.withDayOfMonth(1);
 		LocalDate end = ld.withDayOfMonth(ld.lengthOfMonth());
-
-		rankingByMonth.add(new SearchCriteria("date", start, SearchOperation.GREATER_THAN_EQUAL));
-		rankingByMonth.add(new SearchCriteria("date", end, SearchOperation.LESS_THAN_EQUAL));
-        List<Rank> rankListMonth = rankDao.findAll(rankingByMonth, Sort.by("score")).stream().limit(10).collect(Collectors.toList());
-        Collections.reverse(rankListMonth);
-        return rankListMonth;
-
+		
+		Pageable page = PageRequest.of(0, 10, Sort.by("score").descending());	
+		return rankDao.findAll(where(RankingSpecification.greaterThanEq(start)).and(RankingSpecification.lessThanEq(end)), page).toList();
 	}
 
 }
